Added the endpoint DELETE with tests and swagger documentation
