# ms-feedback/src/main/resources/static/swagger/api-msfeedback.yaml
@@ -1,16 +1,16 @@
 openapi: 3.0.0
 info:
   title: ms-feedbacks
-  description: Descrição da API
+  description: API Description
   version: 1.0.0
 paths:
   /feedbacks:
     get:
-      summary: Recuperar todos os feedbacks
-      description: Retorna todos os feedbacks disponíveis.
+      summary: Retrieve all feedbacks
+      description: Returns all available feedbacks.
       responses:
         '200':
-          description: Sucesso. Retorna uma lista de feedbacks.
+          description: Success. Returns a list of feedbacks.
           content:
             application/json:
               schema:
@@ -18,35 +18,57 @@ paths:
                 items:
                   $ref: '#/components/schemas/FeedbackModel'
         '500':
-          description: Erro interno do servidor.
+          description: Internal Server Error
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/InternalServerError'
     post:
-      summary: create feedbacks
-      description: create feedbacks if order id exists in database and order isn't canceled
+      summary: Create feedbacks
+      description: Create feedbacks if the order ID exists in the database and the order isn't canceled.
       responses:
-        201:
-          description: feedback created
+        '201':
+          description: Feedback created
           content:
             application/json:
               schema:
                 type: object
-        400:
-          description: order canceled status
+        '400':
+          description: Order canceled status
           content:
             application/json:
               schema:
                 type: object
-        404:
-          description: order_id doesn't exists
+        '404':
+          description: Order_id doesn't exist in the database
           content:
             application/json:
               schema:
-                type: object
-        500:
-          description: any other error
+                $ref: '#/components/schemas/NotFound'
+  /feedbacks/{id}:
+    delete:
+      summary: Delete feedback
+      description: Deletes an existing feedback.
+      parameters:
+        - name: id
+          in: path
+          description: ID of the feedback to be deleted.
+          required: true
+          schema:
+            type: integer
+      responses:
+        '200':
+          description: Feedback deleted successfully.
           content:
             application/json:
               schema:
-                type: object
+                $ref: '#/components/schemas/FeedbackResponseDTO'
+        '404':
+          description: Feedback not found
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/NotFound'
 
 components:
   schemas:
@@ -61,3 +83,34 @@ components:
           type: string
         order_id:
           type: integer
+    FeedbackResponseDTO:
+      type: object
+      properties:
+        id:
+          type: integer
+        scale:
+          type: string
+        comment:
+          type: string
+        order_id:
+          type: integer
+    NotFound:
+      type: object
+      properties:
+        code:
+          type: integer
+          format: int32
+        status:
+          type: string
+        message:
+          type: string
+    InternalServerError:
+      type: object
+      properties:
+        code:
+          type: integer
+          format: int32
+        status:
+          type: string
+        message:
+          type: string
